# sent-similarity-server

./: Dockerfile  README.md  pyproject.toml  setup.cfg
sent_similarity_server/: SentenceProcessor.py  app.py  download_data.py
tests/: test_SentenceProcessor.py
