[tool.poetry]
name = "sent-similarity-server"
version = "0.1.0"
description = ""
authors = ["David Chanin <chanindav@gmail.com>"]
readme = "README.md"
packages = [{include = "sent_similarity_server"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
