[tool.poetry]
name = "sent-similarity-server"
version = "0.1.0"
description = ""
authors = ["David Chanin <chanindav@gmail.com>"]
readme = "README.md"
packages = [{include = "sent_similarity_server"}]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"
# torch 13+ won't install on OSX with Poetry :(
# https://github.com/python-poetry/poetry/issues/6409
torch = "~1.12.0"
sentence-transformers = "^2.2.2"
ltp = "^4.2.11.post2"
flask = "^2.2.2"
gunicorn = "^20.1.0"
flask-cors = "^3.0.10"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
